--- a/phprac.html
+++ b/phprac.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="container">
-        <a href="myweb.html" class="box">Main Page</a>
+        <a href="index.html" class="box">Main Page</a>
         <a href="kiwi.html" class="box">Kiwi</a>
         <a href="jspractice.html" class="box">Javascript Practice</a>
     </div>
