--- a/kiwi.html
+++ b/kiwi.html
@@ -15,7 +15,7 @@
 
 </body>
 <div id="container">
-    <a href="myweb.html" class="box">Main Page</a>
+    <a href="index.html" class="box">Main Page</a>
     <a href="jspractice.html" class="box">Javascript Practice</a>
     <a href="phprac.html" class="box">PHP</a>
 </div>
