--- a/jspractice.html
+++ b/jspractice.html
@@ -9,7 +9,7 @@
 </head>
 <h1>My Scripts</h1>
 <div id="container">
-    <a href="myweb.html" class="box">Main Page</a>
+    <a href="index.html" class="box">Main Page</a>
     <a href="kiwi.html" class="box">Kiwi</a>
 </div>
 
